Fix HTML validation and semantic structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
 
   <body>
-    <header class="site-header">
-      <nav class="site-nav" aria-label="Primary navigation">
-        <a href="index.html">Home</a>
-        <ul class="nav-links">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="#">Page 1</a></li>
           <li><a href="#">Page 2</a></li>
           <li><a href="#">Page 3</a></li>
@@ -26,8 +26,8 @@
       </p>
     </header>
 
-    <main class="container">
-      <section id="exercise-1" class="card">
+    <main>
+      <section id="exercise-1">
         <h2>Exercise 1: Print Character Names</h2>
         <p>Print out the names of each character in the console.</p>
         <div class="output">
@@ -36,7 +36,7 @@
         </div>
       </section>
 
-      <section id="exercise-2" class="card">
+      <section id="exercise-2">
         <h2>Exercise 2: Filter by Age</h2>
         <p>Print out the names of characters whose age is less than 40.</p>
         <div class="output">
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-      <section id="exercise-3" class="card">
+      <section id="exercise-3">
         <h2>Exercise 3: Reusable Function for Lists</h2>
         <p>
           Create a function that takes any array and renders a list of character
@@ -57,7 +57,7 @@
         </div>
       </section>
 
-      <section id="exercise-4" class="card">
+      <section id="exercise-4">
         <h2>Exercise 4: Age Filter Function</h2>
         <p>
           Create a function that takes an array and an age threshold, then
@@ -69,7 +69,7 @@
         </div>
       </section>
 
-      <section id="exercise-5" class="card">
+      <section id="exercise-5">
         <h2>Exercise 5: Error Handling</h2>
         <p>Add error handling to check if objects have a "name" property.</p>
         <div class="output">
@@ -79,7 +79,7 @@
         </div>
       </section>
 
-      <section id="exercise-6" class="card">
+      <section id="exercise-6">
         <h2>Exercise 6: Test Error Handling</h2>
         <p>Test your error handling by using a broken array.</p>
         <div class="output">
@@ -89,32 +89,29 @@
         </div>
       </section>
 
-      <section class="card">
+      <section>
         <h2>Article Collection</h2>
 
-        <article class="article">
-          <header class="article-header">
+        <article>
+          <header>
             <h3>Article Title</h3>
-            <p class="muted">Short description goes here.</p>
-            <img src="" alt="" />
-            <p class="muted">Author information</p>
+            <p>By Author Name</p>
           </header>
 
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
             quibusdam, iure neque quisquam esse itaque natus fuga provident ad
-            et! Esse, maxime ab deleniti nemo voluptates, incidunt assumenda
-            nesciunt odio delectus, ipsum rem dolores ducimus laudantium quas
-            magnam ad cupiditate tempore quis? Provident fuga nobis delectus
-            nemo.
+            et! Esse, maxime ab deleniti nemo voluptates.
           </p>
 
-          <footer class="muted">Final info about the article</footer>
+          <footer>
+            <p>Final info about the article</p>
+          </footer>
         </article>
       </section>
     </main>
 
-    <footer class="site-footer">
+    <footer>
       <p>&copy; 2025 SAIT</p>
     </footer>
   </body>
